fix: spacing

--- a/src/styles/BookPage.module.scss
+++ b/src/styles/BookPage.module.scss
@@ -5,7 +5,7 @@
    grid-template-columns: minmax(auto, 228px) 1fr;
    gap: 2rem;
    margin-top: 1.4rem;
-   margin-bottom: 4rem;
+   padding-bottom: 4rem;
 }
 
 .bookPageLeft {
