--- a/src/styles/MyBookshelf.module.scss
+++ b/src/styles/MyBookshelf.module.scss
@@ -89,6 +89,7 @@
 @media (max-width: 725px) {
    .bookList {
       grid-template-columns: 1fr;
+      margin-top: 1rem;
    }
 }
 
